--- a/index.html
+++ b/index.html
@@ -1,6 +1,34 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- HTML Meta Tags -->
+<title>Tenha um estilo de vida melhor, essa é nossa causa!</title>
+<meta name="description" content="Vista mais que uma camiseta, viva uma experiência única junto da primeira rede de apoio e maior comunidade do estilo de vida nômade digital para brasileiros! A cada produto comprado você está apoiando o cresimento da comunidade.
+">
+
+<!-- Google / Search Engine Tags -->
+<meta itemprop="name" content="Tenha um estilo de vida melhor, essa é nossa causa!">
+<meta itemprop="description" content="Vista mais que uma camiseta, viva uma experiência única junto da primeira rede de apoio e maior comunidade do estilo de vida nômade digital para brasileiros! A cada produto comprado você está apoiando o cresimento da comunidade.
+">
+<meta itemprop="image" content="https://loja.nomadedigitalbrazil.com/nomade_digital_brazil.png">
+
+<!-- Facebook Meta Tags -->
+<meta property="og:url" content="https://loja.nomadedigitalbrazil.com">
+<meta property="og:type" content="website">
+<meta property="og:title" content="Tenha um estilo de vida melhor, essa é nossa causa!">
+<meta property="og:description" content="Vista mais que uma camiseta, viva uma experiência única junto da primeira rede de apoio e maior comunidade do estilo de vida nômade digital para brasileiros! A cada produto comprado você está apoiando o cresimento da comunidade.
+">
+<meta property="og:image" content="https://loja.nomadedigitalbrazil.com/nomade_digital_brazil.png">
+
+<!-- Twitter Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Tenha um estilo de vida melhor, essa é nossa causa!">
+<meta name="twitter:description" content="Vista mais que uma camiseta, viva uma experiência única junto da primeira rede de apoio e maior comunidade do estilo de vida nômade digital para brasileiros! A cada produto comprado você está apoiando o cresimento da comunidade.
+">
+<meta name="twitter:image" content="https://loja.nomadedigitalbrazil.com/nomade_digital_brazil.png">
+
+<!-- Meta Tags Generated via http://heymeta.com -->
+    
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Compiled and minified CSS -->
